--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
-  <head>Welcome</head>
+  <head>
+    <title>Welcome</title>
+  
+  </head>
   <body>
     <p>Welcome to our plateforme</p>
   
